// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrapper/SidePanel_Profile/Avatars/AvatarRowWithThree Standard 1`] = `
<div>
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
</div>
`;

exports[`Storyshots DisplayWrappers/SidePanel_Profile/Avatars/AvatarRowWithThree Standard 1`] = `
<div>
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
</div>
`;

exports[`Storyshots DisplayWrappers/SidePanel_Profile/Avatars/AvatarRowWithTo Standard 1`] = `
<div
  className="sc-ckVGcZ eUFpHl"
>
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
</div>
`;

exports[`Storyshots DisplayWrappers/SidePanel_Profile/Avatars/AvatarRowWithTwo Standard 1`] = `
<div
  className="sc-ckVGcZ eUFpHl"
>
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
  <img
    alt="profile"
    className="sc-kpOJdX eODvir"
    onClick={[Function]}
    src="Person.png"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper Standard 1`] = `
<nav
  className="sc-bxivhb dGSKYG"
>
  <a
    aria-current="page"
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    HOME
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Causes"
    onClick={[Function]}
  >
    CAUSES
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Posts"
    onClick={[Function]}
  >
    POSTS
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Profile"
    onClick={[Function]}
  >
    PROFILE
  </a>
</nav>
`;

exports[`Storyshots DisplayWrappers|NavBar/LogoWrapper Standard 1`] = `
<div
  className="sc-ifAKCX fnZSTt"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <svg
    onClick={[Function]}
  >
    Logo.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBar Standard 1`] = `
<div
  className="sc-VigVT kcRElN"
>
  <div
    className="sc-EHOje kOcwsO"
  >
    <div
      className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
    >
      <svg
        onClick={[Function]}
      >
        Logo.svg
      </svg>
    </div>
    <nav
      className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      <a
        aria-current="page"
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        HOME
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Causes"
        onClick={[Function]}
      >
        CAUSES
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Posts"
        onClick={[Function]}
      >
        POSTS
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Profile"
        onClick={[Function]}
      >
        PROFILE
      </a>
    </nav>
  </div>
  <div
    className="sc-bwzfXH ilzmva"
  >
    <input
      className="sc-bdVaJa bGHooc"
      placeholder="Search"
      type="text"
    />
  </div>
  <div
    className="sc-gqjmRU cgcBHJ"
  >
    <div
      className="sc-gzVnrw bhQPgz"
    >
      <button
        className="sc-bZQynM bKeyVQ"
        onClick={[Function]}
      >
        SIGN UP
      </button>
      <button
        className="sc-bZQynM etdfXU"
        onClick={[Function]}
      >
        LOG IN
      </button>
    </div>
    <div
      className="sc-gZMcBi hhlJTS"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
      onClick={[Function]}
    >
      <div
        className="sc-iwsKbI eFRUyw"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-dnqmqq dkzfjo"
      >
        <div
          className="sc-htoDjs haDExK"
          fontSize="16px"
          height="50%"
          width="80%"
        >
          James Wheeler
        </div>
        <div
          className="sc-htoDjs ZUubs"
          fontSize="12px"
          height="50%"
          width="80%"
        >
          larkin_tr***@yahoo.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarLeft Standard 1`] = `
<div
  className="sc-EHOje kOcwsO"
>
  <div
    className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
  >
    <svg
      onClick={[Function]}
    >
      Logo.svg
    </svg>
  </div>
  <nav
    className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
  >
    <a
      aria-current="page"
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      HOME
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Causes"
      onClick={[Function]}
    >
      CAUSES
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Posts"
      onClick={[Function]}
    >
      POSTS
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Profile"
      onClick={[Function]}
    >
      PROFILE
    </a>
  </nav>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-gqjmRU cgcBHJ"
>
  <div
    className="sc-gzVnrw bhQPgz"
  >
    <button
      className="sc-bZQynM bKeyVQ"
      onClick={[Function]}
    >
      SIGN UP
    </button>
    <button
      className="sc-bZQynM etdfXU"
      onClick={[Function]}
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-gZMcBi hhlJTS"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
    onClick={[Function]}
  >
    <div
      className="sc-iwsKbI eFRUyw"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-dnqmqq dkzfjo"
    >
      <div
        className="sc-htoDjs haDExK"
        fontSize="16px"
        height="50%"
        width="80%"
      >
        James Wheeler
      </div>
      <div
        className="sc-htoDjs ZUubs"
        fontSize="12px"
        height="50%"
        width="80%"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-iwsKbI eFRUyw"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-dnqmqq dkzfjo"
>
  <div
    className="sc-htoDjs haDExK"
    fontSize="16px"
    height="50%"
    width="80%"
  >
    James Wheeler
  </div>
  <div
    className="sc-htoDjs ZUubs"
    fontSize="12px"
    height="50%"
    width="80%"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-gZMcBi hhlJTS"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <div
    className="sc-iwsKbI eFRUyw"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-dnqmqq dkzfjo"
  >
    <div
      className="sc-htoDjs haDExK"
      fontSize="16px"
      height="50%"
      width="80%"
    >
      James Wheeler
    </div>
    <div
      className="sc-htoDjs ZUubs"
      fontSize="12px"
      height="50%"
      width="80%"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-gzVnrw bhQPgz"
>
  <button
    className="sc-bZQynM bKeyVQ"
    onClick={[Function]}
  >
    SIGN UP
  </button>
  <button
    className="sc-bZQynM etdfXU"
    onClick={[Function]}
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel CauseInfo 1`] = `
<div
  className="sc-kgoBCf clOSRS"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-fjdhpX kthXMt"
  >
    A Cause in Voz de PR is a request for assistance. It should be used to bring attention to a situation that requires help. Help can be in the form of volunteer work, a donation, or any other type of assistance that would help the Cause to achieve its goal!
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel CauseOnly 1`] = `
<div
  className="sc-kAzzGY hGxmIF"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-fjdhpX kthXMt"
  >
    A Cause in Voz de PR is a request for assistance. It should be used to bring attention to a situation that requires help. Help can be in the form of volunteer work, a donation, or any other type of assistance that would help the Cause to achieve its goal! If you would like to make a donation, please make a note of the Cause ID and donate via ATH MOVIL.
  </div>
  <button
    className="sc-jzJRlG gTCOWF"
  >
    Create Cause
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel PostInfo 1`] = `
<div
  className="sc-kGXeez cnKlXV"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-fjdhpX kthXMt"
  >
    A Post in Voz de PR is curated information that will be useful to the people of Puerto Rico. It’s aim is to inform using knowledge, facts, figures, news articles, or general information that may benefit other users. The goal of a Post is to provide information that may benefit another user!
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel PostOnly 1`] = `
<div
  className="sc-chPdSV izoixX"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-fjdhpX kthXMt"
  >
    A Post in Voz de PR is curated information that will be useful to the people of Puerto Rico. A  Post aims to inform using knowledge, facts, figures, news articles, or general information that may benefit other users. It can be used as the starting point for a conversation relevant to Puerto Rico!
  </div>
  <button
    className="sc-jzJRlG iBPOWB"
  >
    Create Post
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel Standard 1`] = `
<div
  className="sc-cSHVUG hWFwZM"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-fjdhpX kthXMt"
  >
    Voz de Puerto Rico (Voz de PR) is a social platform that allows users to take an active role in the progression of human needs, social betterment and national development of Puerto Rico. It is community based, and provides a voice to those who wish to enact change across society.
  </div>
  <button
    className="sc-jzJRlG gTCOWF"
  >
    Create Cause
  </button>
  <button
    className="sc-jzJRlG iBPOWB"
  >
    Create Post
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/Avatars/Avatars Standard 1`] = `
<div>
  <div>
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
  </div>
  <div
    className="sc-ckVGcZ eUFpHl"
  >
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
  </div>
  <div>
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
  </div>
  <div
    className="sc-ckVGcZ eUFpHl"
  >
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
    <img
      alt="profile"
      className="sc-kpOJdX eODvir"
      onClick={[Function]}
      src="Person.png"
    />
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/DropDown/DropDown Standard 1`] = `
<div
  className="sc-kEYyzF cRccJh"
>
  <div
    className="sc-jKJlTe dcUQHY"
    onClick={[Function]}
  >
    <input
      className="sc-kpOJdX iwJGVX"
      placeholder="Locations"
    />
    <div
      className="sc-dxgOiQ Qiepv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-caret-down fa-w-10 "
        color="#131415"
        data-icon="caret-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/DropDown/InlineContent Standard 1`] = `
<div
  className="sc-jKJlTe dAkLOv"
>
  <input
    className="sc-kpOJdX iwJGVX"
    placeholder="Locations"
  />
  <div
    className="sc-dxgOiQ Qiepv"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-caret-down fa-w-10 "
      color="#131415"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/DropDown/ListOfLocations Standard 1`] = `
<ul
  className="sc-dxgOiQ iXrhfl"
>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Aguadilla
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Rincon
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Mayagüez
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Boqueron
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Arecibo
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Vega Baja
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Dorado
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Adjuntas
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Jayuya
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Aibonito
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Cayey
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Caguas
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    San Juan
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Yuaco
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Guanica
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Ponce
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Salinas
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Guayama
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Luquillo
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Fajardo
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Dewey
  </li>
  <li
    className="sc-kpOJdX etIAIa"
    onClick={[Function]}
  >
    Isabel Segunda
  </li>
</ul>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/SidePanel_Profile_Body Standard 1`] = `
<div
  className="sc-brqgnP cBziTn"
>
  <div
    className="sc-fjdhpX kthXMt"
    profile={true}
  >
    Change Details
  </div>
  <input
    className="sc-cvbbAY iUJmUp"
    placeholder="Name"
  />
  <div
    className="sc-eHgmQL jjCwiS"
  >
    <div
      className="sc-kkGfuU ciHlsZ"
      onClick={[Function]}
    >
      <input
        className="sc-eNQAEJ gQmmxZ"
        placeholder="Locations"
      />
      <div
        className="sc-hMqMXs cfKBZj"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-down fa-w-10 "
          color="#131415"
          data-icon="caret-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="sc-jWBwVP gqGxww"
  >
    Select A New Avatar
  </div>
  <div>
    <div>
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
    </div>
    <div
      className="sc-ckVGcZ eUFpHl"
    >
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
    </div>
    <div>
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
    </div>
    <div
      className="sc-ckVGcZ eUFpHl"
    >
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
      <img
        alt="profile"
        className="sc-kpOJdX eODvir"
        onClick={[Function]}
        src="Person.png"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel_Profile/SidePanelProfile Standard 1`] = `
<div
  className="sc-cMljjf kFVBvl"
>
  <svg>
    PRFlag.svg
  </svg>
  <svg
    className="sc-jTzLTM idQSUd"
  >
    Logo.svg
  </svg>
  <div
    className="sc-brqgnP jORHnO"
  >
    <div
      className="sc-fjdhpX kthXMt"
      profile={true}
    >
      Change Details
    </div>
    <input
      className="sc-cvbbAY iUJmUp"
      onChange={[Function]}
      placeholder="Name"
      value=""
    />
    <div
      className="sc-eHgmQL jjCwiS"
    >
      <div
        className="sc-kkGfuU ciHlsZ"
        onClick={[Function]}
      >
        <input
          className="sc-eNQAEJ gQmmxZ"
          onChange={[Function]}
          placeholder="Locations"
          value=""
        />
        <div
          className="sc-hMqMXs cfKBZj"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-down fa-w-10 "
            color="#131415"
            data-icon="caret-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sc-jWBwVP gqGxww"
    >
      Select A New Avatar
    </div>
    <div>
      <div>
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
      </div>
      <div
        className="sc-ckVGcZ eUFpHl"
      >
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
      </div>
      <div>
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
      </div>
      <div
        className="sc-ckVGcZ eUFpHl"
      >
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
        <img
          alt="profile"
          className="sc-kpOJdX eODvir"
          onClick={[Function]}
          src="Person.png"
        />
      </div>
    </div>
  </div>
  <button
    className="sc-jzJRlG iBPOWB"
    onClick={[Function]}
  >
    Change Details
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/BottomWrapper Standard 1`] = `
<div
  className="sc-hMqMXs rPIbl"
>
  <div
    className="sc-jKJlTe zxQDl"
  >
    <svg>
      Bubble.svg
    </svg>
  </div>
  <div
    className="sc-eNQAEJ bcklKe"
  >
    12 Comments
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/BubbleWrapper Standard 1`] = `
<div
  className="sc-jKJlTe zxQDl"
>
  <svg>
    Bubble.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/LeftContent Standard 1`] = `
<div
  className="sc-jWBwVP BwYME"
>
  <div
    className="sc-hSdWYo caPUbX"
  >
    <div
      className="sc-kEYyzF bCcmzf"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-kkGfuU goPgEW"
    >
      
       
      James Wheeler Montgommery McGuiness
    </div>
    <div
      className="sc-kkGfuU goPgEW"
    >
      •
       
      1 Hour Ago
    </div>
    <svg
      className="sc-iAyFgw eAvCdw"
    >
      Delete.svg
    </svg>
  </div>
  <div
    className="sc-eHgmQL iiohIn"
  >
    Puerto Rico - Cherish Its Natural Wonders
  </div>
  <p
    className="sc-cvbbAY dDHpuA"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
  </p>
  <div
    className="sc-hMqMXs rPIbl"
  >
    <div
      className="sc-jKJlTe zxQDl"
    >
      <svg>
        Bubble.svg
      </svg>
    </div>
    <div
      className="sc-eNQAEJ bcklKe"
    >
      12 Comments
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-kEYyzF bCcmzf"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent C 1`] = `
<div
  className="sc-gPEVay bQFKvN"
>
  <div
    className="sc-jAaTju LWtIf"
  >
    <div
      className="sc-brqgnP ijAzHj"
    >
      147 Votes
    </div>
    <div
      className="sc-cMljjf jlfGge"
    >
      Cause
    </div>
  </div>
  <img
    className="sc-jDwBTQ fjfVZD"
    src="PuertoRico_VdPR.jpg"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent P 1`] = `
<div
  className="sc-gPEVay bQFKvN"
>
  <div
    className="sc-jAaTju LWtIf"
  >
    <div
      className="sc-brqgnP iXyEHL"
    >
      147 Votes
    </div>
    <div
      className="sc-cMljjf dizbJl"
    >
      Post
    </div>
  </div>
  <img
    className="sc-jDwBTQ fjfVZD"
    src="PuertoRico_VdPR.jpg"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent Standard 1`] = `
<div
  className="sc-gPEVay bQFKvN"
>
  <div
    className="sc-jAaTju LWtIf"
  >
    <div
      className="sc-brqgnP ijAzHj"
    >
      147 Votes
    </div>
    <div
      className="sc-cMljjf jlfGge"
    >
      Cause
    </div>
  </div>
  <img
    className="sc-jDwBTQ fjfVZD"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCard C 1`] = `
<div
  className="sc-iRbamj jMnMXl"
>
  <div
    className="sc-jWBwVP BwYME"
  >
    <div
      className="sc-hSdWYo caPUbX"
    >
      <div
        className="sc-kEYyzF bCcmzf"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-kkGfuU goPgEW"
      >
        
         
        James Wheeler Montgommery McGuiness 
      </div>
      <div
        className="sc-kkGfuU goPgEW"
      >
        •
         
        1 hour ago
      </div>
      <svg
        className="sc-iAyFgw eAvCdw"
      >
        Delete.svg
      </svg>
    </div>
    <div
      className="sc-eHgmQL iiohIn"
    >
      Puerto Rico - Cherish Its Natural Wonders
    </div>
    <p
      className="sc-cvbbAY dDHpuA"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
    </p>
    <div
      className="sc-hMqMXs rPIbl"
    >
      <div
        className="sc-jKJlTe zxQDl"
      >
        <svg>
          Bubble.svg
        </svg>
      </div>
      <div
        className="sc-eNQAEJ bcklKe"
      >
        12 Comments
      </div>
    </div>
  </div>
  <div
    className="sc-gPEVay bQFKvN"
  >
    <div
      className="sc-jAaTju LWtIf"
    >
      <div
        className="sc-brqgnP ijAzHj"
      >
        147 Votes
      </div>
      <div
        className="sc-cMljjf jlfGge"
      >
        Cause
      </div>
    </div>
    <img
      className="sc-jDwBTQ fjfVZD"
      src="PuertoRico_VdPR.jpg"
    />
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCard P 1`] = `
<div
  className="sc-iRbamj jMnMXl"
>
  <div
    className="sc-jWBwVP BwYME"
  >
    <div
      className="sc-hSdWYo caPUbX"
    >
      <div
        className="sc-kEYyzF bCcmzf"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-kkGfuU goPgEW"
      >
        
         
        James Wheeler Montgommery McGuiness 
      </div>
      <div
        className="sc-kkGfuU goPgEW"
      >
        •
         
        1 hour ago
      </div>
      <svg
        className="sc-iAyFgw eAvCdw"
      >
        Delete.svg
      </svg>
    </div>
    <div
      className="sc-eHgmQL iiohIn"
    >
      Puerto Rico - Cherish Its Natural Wonders
    </div>
    <p
      className="sc-cvbbAY dDHpuA"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
    </p>
    <div
      className="sc-hMqMXs rPIbl"
    >
      <div
        className="sc-jKJlTe zxQDl"
      >
        <svg>
          Bubble.svg
        </svg>
      </div>
      <div
        className="sc-eNQAEJ bcklKe"
      >
        12 Comments
      </div>
    </div>
  </div>
  <div
    className="sc-gPEVay bQFKvN"
  >
    <div
      className="sc-jAaTju LWtIf"
    >
      <div
        className="sc-brqgnP iXyEHL"
      >
        147 Votes
      </div>
      <div
        className="sc-cMljjf dizbJl"
      >
        Post
      </div>
    </div>
    <img
      className="sc-jDwBTQ fjfVZD"
      src="PuertoRico_VdPR.jpg"
    />
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCardTopLineWrapper Standard 1`] = `
<div
  className="sc-hSdWYo caPUbX"
>
  <div
    className="sc-kEYyzF bCcmzf"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-kkGfuU goPgEW"
  >
    
     
    James Wheeler Montgommery McGuiness
  </div>
  <div
    className="sc-kkGfuU goPgEW"
  >
    •
     
    1 Hour Ago
  </div>
  <svg
    className="sc-iAyFgw eAvCdw"
  >
    Delete.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper C 1`] = `
<div
  className="sc-jAaTju LWtIf"
>
  <div
    className="sc-brqgnP ijAzHj"
  >
    193 Votes
  </div>
  <div
    className="sc-cMljjf jlfGge"
  >
    Cause
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper P 1`] = `
<div
  className="sc-jAaTju LWtIf"
>
  <div
    className="sc-brqgnP iXyEHL"
  >
    1000000 Votes
  </div>
  <div
    className="sc-cMljjf dizbJl"
  >
    Post
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper Standard 1`] = `
<div
  className="sc-jAaTju LWtIf"
>
  <div
    className="sc-brqgnP ijAzHj"
  >
    TEST
  </div>
  <div
    className="sc-cMljjf jlfGge"
  >
    Cause
  </div>
</div>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Login 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton SignUp 1`] = `
<button
  className="sc-bZQynM bKeyVQ"
  onClick={[Function]}
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Standard 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-htoDjs dfBkuE"
  fontSize="12px"
  height="50%"
  width="100%"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-htoDjs fkMuCz"
  fontSize="16px"
  height="50%"
  width="100%"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-htoDjs fCdwiU"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Buttons/ActionButton C 1`] = `
<button
  className="sc-jzJRlG gTCOWF"
>
  Create Cause
</button>
`;

exports[`Storyshots Primitive|Buttons/ActionButton P 1`] = `
<button
  className="sc-jzJRlG iBPOWB"
>
  Create Post
</button>
`;

exports[`Storyshots Primitive|Buttons/ActionButton Standard 1`] = `
<button
  className="sc-jzJRlG gTCOWF"
/>
`;

exports[`Storyshots Primitive|Buttons/DeleteSubjectButton DeleteButton 1`] = `
<svg
  className="sc-iAyFgw eAvCdw"
>
  Delete.svg
</svg>
`;

exports[`Storyshots Primitive|Images/Avatar Selected 1`] = `
<img
  alt="profile"
  className="sc-hzDkRC eoicOm"
  src="Person.png"
/>
`;

exports[`Storyshots Primitive|Images/Avatar Standard 1`] = `
<img
  alt="profile"
  className="sc-hzDkRC eoicOm"
  src="Person.png"
/>
`;

exports[`Storyshots Primitive|Images/ClearInput Standard 1`] = `
<div
  className="sc-jlyJG jrhVIp"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-times-circle fa-w-16 "
    color="#d8d8d8"
    data-icon="times-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Primitive|Images/DropDownArrow Standard 1`] = `
<div
  className="sc-jlyJG fexCTk"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-caret-down fa-w-10 "
    color="#131415"
    data-icon="caret-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Primitive|Images/Logo Standard 1`] = `
<svg
  className="sc-jTzLTM idQSUd"
>
  Logo.svg
</svg>
`;

exports[`Storyshots Primitive|Images/SubjectImage Standard 1`] = `
<img
  className="sc-jDwBTQ fjfVZD"
  src="PuertoRico_VdPR.jpg"
/>
`;

exports[`Storyshots Primitive|Inputs/LocationInput Standard 1`] = `
<input
  className="sc-jlyJG hwcyIw"
  placeholder="Locations"
/>
`;

exports[`Storyshots Primitive|Inputs/NameInput Standard 1`] = `
<input
  className="sc-ckVGcZ HHutt"
  onChange={[Function]}
  placeholder="Name"
  value=""
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes and Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/causes"
  onClick={[Function]}
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/posts"
  onClick={[Function]}
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/profile"
  onClick={[Function]}
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  TEST
</a>
`;

exports[`Storyshots Primitive|Lists/ListItems/Location Standard 1`] = `
<li
  className="sc-kpOJdX etIAIa"
/>
`;

exports[`Storyshots Primitive|Lists/ListItems/Location Tester 1`] = `
<li
  className="sc-kpOJdX etIAIa"
>
  London
</li>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Name 1`] = `
<div
  className="sc-kkGfuU goPgEW"
>
  
   
  James Montgommery Wheeler McGuiness
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Standard 1`] = `
<div
  className="sc-kkGfuU goPgEW"
>
  
   
  Test
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo TimeAgo 1`] = `
<div
  className="sc-kkGfuU goPgEW"
>
  •
   
  1 Hour Ago
</div>
`;

exports[`Storyshots Primitive|text/CommentsIndicator Content 1`] = `
<div
  className="sc-eNQAEJ bcklKe"
>
  12 Comments
</div>
`;

exports[`Storyshots Primitive|text/CommentsIndicator Standard 1`] = `
<div
  className="sc-eNQAEJ bcklKe"
>
  Test
</div>
`;

exports[`Storyshots Primitive|text/Info Standard 1`] = `
<div
  className="sc-fjdhpX kthXMt"
>
  Voz de Puerto Rico (Voz de PR) is a social platform that allows users to take an active role in the progression of human needs, social betterment and national development of Puerto Rico. It is community based, and provides a voice to those who wish to enact change across society.
</div>
`;

exports[`Storyshots Primitive|text/SubjectSummary Long Summary 1`] = `
<p
  className="sc-cvbbAY dDHpuA"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
</p>
`;

exports[`Storyshots Primitive|text/SubjectSummary Standard 1`] = `
<p
  className="sc-cvbbAY dDHpuA"
>
  Test
</p>
`;

exports[`Storyshots Primitive|text/SubjectTitle Long Title 1`] = `
<div
  className="sc-eHgmQL iiohIn"
>
  Puerto Rico - Cherish Its Natural Wonders and Come and Visit Us to See How We Do Things Differently. Our nature is amazing and our people are full of life
</div>
`;

exports[`Storyshots Primitive|text/SubjectTitle Standard 1`] = `
<div
  className="sc-eHgmQL iiohIn"
>
  Test
</div>
`;

exports[`Storyshots Primitive|text/SubjectTitle Title 1`] = `
<div
  className="sc-eHgmQL iiohIn"
>
  Puerto Rico - Cherish Its Natural Wonders
</div>
`;

exports[`Storyshots Primitive|text/SubjectType C 1`] = `
<div
  className="sc-cMljjf jlfGge"
>
  Cause
</div>
`;

exports[`Storyshots Primitive|text/SubjectType P 1`] = `
<div
  className="sc-cMljjf dizbJl"
>
  Post
</div>
`;

exports[`Storyshots Primitive|text/SubjectType Standard 1`] = `
<div
  className="sc-cMljjf jlfGge"
>
  Cause
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes C 1`] = `
<div
  className="sc-brqgnP ijAzHj"
>
  178 Votes
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes P 1`] = `
<div
  className="sc-brqgnP iXyEHL"
>
  178 Votes
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes Standard 1`] = `
<div
  className="sc-brqgnP ijAzHj"
>
  123 Test
</div>
`;
